# djangorestframework-pydantic-ai

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/workflows/: release.yml  tests.yml
docs/: index.md  polymorphic-actions.md  quickstart.md  reference.md
drf_pydantic_ai/: __init__.py  spec_toolset.py  version.py
drf_pydantic_ai/types/: __init__.py  agent_deps.py
polymorphic-actions/: index.html
quickstart/: index.html
reference/: index.html
rest_framework_pydantic_ai/: __init__.py  spec_capability.py  spec_toolset.py  version.py
rest_framework_pydantic_ai/types/: __init__.py  query_param.py  url_kwarg.py
scripts/: release-publish.sh
search/: search_index.json
tests/: conftest_settings.py  test_spec_capability.py  test_spec_toolset.py  test_version.py
tests/testapp/: apps.py  models.py  serializers.py
tests/types/: test_agent_deps.py  test_query_param.py  test_url_kwarg.py
